--- a/style.css
+++ b/style.css
@@ -22,3 +22,76 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+}
+
+.c1 {
+    width: 25%;
+
+    background-color: aqua;
+}
+
+.c2 {
+    width: 50%;
+    padding-top: 5%;
+}
+
+.c3 {
+    width: 25%;
+    background: crimson;
+}
+
+#grid-container {
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 columns */
+    gap: 2%;
+    padding: 2%;
+}
+
+.grid-button {
+    width: 100%;
+    height: 100%;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 3%;
+    margin-bottom: 6%;
+}
+
+.grid-button:disabled {
+    background-color: gray;
+}
+
+.buttonUser {
+    width: 50%;
+    height: 100%;
+    margin-top: 10%;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 3%;
+    margin-bottom: 6%;
+}
+
+.userButtonContainer{
+    display: flex;
+    justify-content: center;
+}
