--- a/style.css
+++ b/style.css
@@ -1,26 +1,18 @@
 html {
     box-sizing: border-box;
     font-size: 16px;
+}
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    font-size: 16px;
     background-color: lightblue;
+    overflow: hidden; /* Nasconde lo scroll verticale */
 }
 
 *, *:before, *:after {
     box-sizing: inherit;
-}
-
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
 }
 
 header {
@@ -28,6 +20,8 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 1%;
+    background-color: lightcoral;
 }
 
 .container {
@@ -36,24 +30,18 @@ header {
     height: 100vh;
 }
 
-.c1 {
-    width: 25%;
-
-    background-color: aqua;
+.c1, .c3 {
+    width: 15%;
+    height: 80%;
 }
 
 .c2 {
-    width: 50%;
-    padding-top: 5%;
-}
-
-.c3 {
-    width: 25%;
-    background: crimson;
+    width: 70%;
+    height: 80%;
+    padding-top: 1%;
 }
 
 #grid-container {
-
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 4 columns */
     gap: 2%;
@@ -65,12 +53,12 @@ header {
     height: 100%;
     background-color: #3498db;
     color: #fff;
-    border: none;
+    border: 1px solid black;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
     padding: 3%;
-    margin-bottom: 6%;
+    margin-bottom: 2%; /* Ridotto lo spazio tra i pulsanti */
 }
 
 .grid-button:disabled {
@@ -80,18 +68,40 @@ header {
 .buttonUser {
     width: 50%;
     height: 100%;
-    margin-top: 10%;
-    background-color: #3498db;
+    margin-top: 2%;
+    background-color: #0f7bbb;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
     padding: 3%;
-    margin-bottom: 6%;
+    margin-bottom: 4%; /* Ridotto lo spazio tra il pulsante utente e il contenitore */
 }
 
-.userButtonContainer{
+.userButtonContainer {
     display: flex;
     justify-content: center;
+}
+
+.pacchiBlu {
+    background-color: blue;
+    color: white;
+    width: 100%;
+    padding-right: 4%;
+    margin-bottom: 2%; /* Ridotto lo spazio tra i pacchi */
+    text-align: right;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.pacchiRed {
+    background-color: red;
+    color: white;
+    width: 100%;
+    padding-left: 4%;
+    margin-bottom: 2%; /* Ridotto lo spazio tra i pacchi */
+    text-align: left;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
