--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     font-size: 16px;
     background-color: lightblue;
-    overflow: hidden; /* Nasconde lo scroll verticale */
+    overflow: hidden;
 }
 
 *, *:before, *:after {
